--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <noscript>
+    Sorry, you need to enable Javascript to run this application.
+  </noscript>
   <app-root>Loading...</app-root>
   <script>
     if ('serviceWorker' in navigator) {
