--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Pollenkontrollen</title>
   <base href="/">
 
+  <meta name="description" content="Snabba pollenrapporter för ditt område, varje dag.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#3f51b5">
   <meta name="apple-mobile-web-app-capable" content="yes">
