--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,21 @@
   <title>Pollenkontrollen</title>
   <base href="/">
 
-  <meta name="description" content="Snabba pollenrapporter för ditt område, varje dag.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#3f51b5">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="description"
+        content="Snabba pollenrapporter för ditt område, varje dag.">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1">
+  <meta name="theme-color"
+        content="#3f51b5">
+  <meta name="apple-mobile-web-app-capable"
+        content="yes">
+  <link rel="manifest"
+        href="/manifest.json">
+  <link rel="icon"
+        type="image/x-icon"
+        href="favicon.ico">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
