Remove loading text

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <noscript>
     Sorry, you need to enable Javascript to run this application.
   </noscript>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
