--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <app-root></app-root>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+      navigator.serviceWorker.register('/ngsw-worker.js').then(function (registration) {
         // Registration was successful
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
       }).catch(function (err) {
